# iris_project

./: docker-compose.yml
backend/: .dockerignore  Dockerfile  api.py  iris_controller.py  main.py  model_loader.py  pyproject.toml  run.sh  train.ipynb  users_controller.py
backend/models/sklearn/: iris_model.pk
backend/models/tf/iris_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
backend/models/tf/iris_model/variables/: variables.data-00000-of-00001  variables.index
frontend/: Dockerfile  home.py  pyproject.toml  run.sh
