[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Alejandro <alejandroperd99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<4.0"
requests = "^2.31.0"
streamlit = "^1.26.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
